--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,2 @@
-<h1>Comments</h1>
-<ul>
-    <li *ngFor="let comment of comments">
-    	<div *ngIf="comment.editable === false" class="jumbotron">
-	    	<p><span>AUTHOR:	</span>{{comment.author}}</p>
-	    	<p><span>COMMENT:	</span>{{comment.comment}}</p>
-	    	<button (click)="deleteComment(comment)" class="btn btn-danger">Delete</button>
-	    	<button (click)="editComment(comment)" class="btn btn-primary">Edit</button>
-	    </div>
-	    <div *ngIf="comment.editable === true" class="jumbotron">
-	    	<div class="alert alert-warning">EDIT COMMENT</div>
-    		<p><span>AUTHOR:	</span><input [(ngModel)]="editedAuthor" type="text"></p>
-    		<p><span>COMMENT:	</span><input [(ngModel)]="editedComment" type="text"></p>
-    		<button (click)="deleteComment(comment)" class="btn btn-danger">Delete</button>
-    		<button (click)="editComment(comment)" class="btn btn-primary">Edit</button>
-    		<button (click)="saveComment(comment,editedAuthor,editedComment)" class="btn btn-warning">Save Changes</button>
-	    </div>
-    </li>
-</ul>
-
-<div class="container">
-	<h1>Post a Comment</h1>
-	<form (ngSubmit)="postComment(author,comment)" #commentForm="ngForm">
-		<div class="form-group">
-			<label for="author">Author</label>
-			<input [(ngModel)]="author" name="author" type="text" class="form-control" id="author" required>
-		</div>
-		<div class="form-group">
-			<label for="comment">Comment</label>
-			<input [(ngModel)]="comment" name="comment" type="text" class="form-control" id="comment" required>
-		</div>
-		<button type="submit" class="btn btn-success">Submit</button>
-	</form>
-</div>
+<app-comments></app-comments>
+<app-comments-form></app-comments-form>
